# Collaborative-MAPF

./: CMakeLists.txt  GreedyAssignment.cpp  README.md  Untitled.ipynb  astar_sample.txt  package.xml  sipp_sample.txt  test2.txt
data/CCBS_graphs/: graph0.graphml  graph3.graphml  graph4.graphml  graph8.graphml  graph9.graphml
data/collab_problems/: CBS_results.txt  ICTS_results.txt
data/graphs/: graph0.graphml  halton2D100_1.graphml  halton2D50_1.graphml  imp2D50_1.graphml  lemme.graphml  love2D10_1.graphml  plox.graphml  room.graphml  warehouse.graphml
data/mean_task_problems/: CBS_results.txt  CBS_results_more.txt
data/medium_graphs/: graph0.graphml  graph1.graphml  graph2.graphml  graph3.graphml  graph4.graphml  graph5.graphml  graph6.graphml  graph7.graphml  graph8.graphml  graph9.graphml
data/new_graphs/: graph0.graphml  graph4.graphml  graph5.graphml  graph6.graphml  graph7.graphml
data/planning_problems/: problem_set_05_200.txt  solvable_problem_set_05_200.txt  test_set.txt
data/problem_sets/: CBS.txt  CBS_more_results.txt  ICTS_more_results.txt  all_results.txt  benchmark.py  rbegin_CBS_results.txt
data/results/: e_roadmaps.txt  problem_set_05_200_results.txt
data/sample_problems/: collab_easy.txt  collab_hard.txt  test_2.txt  test_2_icts.txt  test_3.txt  test_4.txt  test_4.txt.orig  test_5.txt  test_6.txt
data/small_graphs/: graph0.graphml  graph1.graphml  graph2.graphml  graph3.graphml  graph4.graphml  graph5.graphml  graph6.graphml  graph7.graphml  graph8.graphml  graph9.graphml
data/sparse_problems/: 5_agent_PEA.csv  A_025_e_roadmaps.txt  A_e_roadmaps.txt  PEA_025_e_roadmaps.txt  dense_e_roadmaps.txt  e_roadmaps.txt
data/test_problems/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  CBS_results.txt  ICTS_results.txt
data/testing/: CMINT_test_set.txt
data/testing_problems/: CBS_results.txt  ISPS_results.txt
examples/: create_problems.py  exampleCBS.cpp  examplePCCBS.cpp  examplePCSolver.cpp  examplePCSolverHCBS.cpp  examplePCSolverPCCBS.cpp  examplePCSolverPCICTS.cpp  exampleTwoAgentsC_MINT.cpp  exampleTwoAgentsC_MINT_2.cpp  exampleTwoAgentsDENSIFY.cpp  exampleTwoAgentsTRIVIAL.cpp
include/CMAPF/: 2x2.cpp  BGLDefinitions.hpp  CBS.hpp  CBSDefinitions.hpp  ISPS.hpp  ISPSDefinitions.hpp  LoadGraphfromFile.hpp  PCDefinitions.hpp  PCSolver.hpp  icts.hpp  time_priority_queue.hpp
include/C_MINT/: BGLDefinitions.hpp  C_MINT.hpp  LoadGraphfromFile.hpp  tensorProductGenerator.hpp
include/C_MINT_2/: BGLDefinitions.hpp
include/DENSIFY/: BGLDefinitions.hpp  DENSIFY.hpp  LoadGraphfromFile.hpp  tensorProductGenerator.hpp
include/HCBS/: 2x2.cpp  4x4.cpp  BGLDefinitions.hpp  CBS.hpp  CBSDefinitions.hpp  ISPS.hpp  ISPSDefinitions.hpp  LoadGraphfromFile.hpp  PCDefinitions.hpp.orig  PCSolver.hpp  time_priority_queue.hpp  time_priority_queue.hpp.orig
include/HCBS_old/: CBS.hpp  PCSolver.hpp
include/ICTS/: BGLDefinitions.hpp  CBS.hpp  CBSDefinitions.hpp  C_MINT_2.hpp  LoadGraphfromFile.hpp  a.out  create_all_combinations.cpp  icts.hpp  tensorProductGenerator.hpp  time_priority_queue.hpp
include/PCCBS/: 2x2.cpp  BGLDefinitions.hpp  CBS.hpp  CBSDefinitions.hpp  CBS_mod.hpp  LoadGraphfromFile.hpp  PCDefinitions.hpp  a.out  time_priority_queue.hpp
include/PCCBS_old/: CBS.hpp  (+1 more)
scripts/: GreedyAssignment.cpp  allPairsShortestPaths.cpp  apsp  benchmark.py  check_images  check_images.cpp  compile_CBS_results.cpp  compile_results.py  create  createEpsilonGraphs  createEpsilonGraphs.cpp  create_obstacles  create_obstacles.cpp  create_obstacles.orig  extract_solvable_problems.py  generateRoadmaps.py  generate_collaborative_MAPD_problems  generate_collaborative_MAPD_problems.cpp  generate_planning_problems  generate_planning_problems.cpp  generate_sequential_MAPD_problems  generate_sequential_MAPD_problems.cpp  greedyAssignment  makeGraph.cpp  makePC.cpp  makePC.py  makePCpods.cpp  makePCpods.py  makeProblem.cpp  makeProblems.py  make_problems.py  problem_set_05_200  results_validator.py  visualize_graphs  visualize_graphs.cpp  visualize_graphs_with_start_goal  visualize_graphs_with_start_goal.cpp
(+129167 files in other folders)
