<?xml version="1.0"?>
<package format="2">
    <name>MAPF</name>
    <version>0.0.0</version>
    <description>Multi Agent Pathfinding for Collaborative Tasks</description>
    <author email="kushal.k@iitkgp.ac.in">Rajat Kumar Jenamani</author>
    <maintainer email="kushal.k@iitkgp.ac.in"></maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>ompl</depend>
    <depend>boost</depend>
    <depend>eigen</depend>
</package>
