<?xml version="1.0"?>
<package format="2">
    <name>CMAPF</name>
    <version>0.0.0</version>
    <description>Multi Agent Pathfinding for Collaborative Tasks</description>
    <author email="kushal.k@iitkgp.ac.in">Kushal Kedia</author>
    <maintainer email="kushal.k@iitkgp.ac.in"></maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>ompl</depend>
    <depend>boost</depend>
    <depend>eigen</depend>
</package>
